fix(navbar-submenu): spacing & alignment for RTL

--- a/styles/web/sass/core/_legacy/bootstrap/_bootstrap-rtl.scss
+++ b/styles/web/sass/core/_legacy/bootstrap/_bootstrap-rtl.scss
@@ -1016,12 +1016,12 @@
         margin-right: 2px;
         margin-left: 0;
     }
-    .dropdown-menu {
-        right: 0;
-        left: auto;
-        float: left;
-        text-align: right;
-    }
+    // .dropdown-menu {
+    //     right: 0;
+    //     left: auto;
+    //     float: left;
+    //     text-align: right;
+    // }
     .dropdown-menu.pull-right {
         left: 0;
         right: auto;
