--- a/styles/web/sass/core/_legacy/bootstrap/_bootstrap.scss
+++ b/styles/web/sass/core/_legacy/bootstrap/_bootstrap.scss
@@ -3526,20 +3526,16 @@ tbody.collapse.in {
 .dropdown-menu {
     position: absolute;
     top: 100%;
-    left: 0;
     z-index: 1000;
     display: none;
-    float: left;
     min-width: 160px;
     padding: 5px 0;
     margin: 2px 0 0;
     font-size: 14px;
-    text-align: left;
     list-style: none;
     background-color: #fff;
     -webkit-background-clip: padding-box;
     background-clip: padding-box;
-    border: 1px solid #ccc;
     border: 1px solid rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
@@ -4443,11 +4439,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
         box-shadow: none;
     }
 }
-.navbar-nav > li > .dropdown-menu {
-    margin-top: 0;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-}
+// .navbar-nav > li > .dropdown-menu {
+//     margin-top: 0;
+//     border-top-left-radius: 0;
+//     border-top-right-radius: 0;
+// }
 .navbar-fixed-bottom .navbar-nav > li > .dropdown-menu {
     margin-bottom: 0;
     border-top-left-radius: 4px;
